# red_drink

./: Cargo.toml  README.md
backend/: .env.sample  Cargo.toml  README.md  Rocket.toml
backend/migrations/00000000000001_create_resources_table/: down.sql
backend/migrations/00000000000300_create_roles_table/: up.sql
backend/migrations/00000000000400_create_accessibles_table/: up.sql
backend/migrations/00000000000500_create_users_table/: up.sql
backend/migrations/00000000000700_create_assignments_table/: down.sql  up.sql
backend/migrations/00000000000700_create_users_roles_table/: up.sql
backend/migrations/00000000000800_create_actions_table/: down.sql  up.sql
backend/migrations/2020-04-26-145957_insert_wildcard_resource/: down.sql
backend/migrations/2020-05-18-132338_create_permissions_table/: up.sql
backend/migrations/2020-05-18-133510_create_roles_table/: up.sql
backend/migrations/2020-05-18-142453_create_roles_permissions_table/: down.sql  up.sql
backend/migrations/2020-05-21-130519_create_users_table/: up.sql
backend/migrations/2020-05-25-125919_create_github_users_table/: down.sql  up.sql
backend/migrations/2020-05-25-130124_create_users_roles_table/: down.sql  up.sql
backend/migrations/2020-05-25-160451_insert_root_permission/: down.sql  up.sql
backend/migrations/2020-06-06-152631_insert_admin_role/: down.sql
backend/migrations/2020-06-06-153418_insert_root_role_to_admin/: down.sql  up.sql
backend/src/: db.rs  lib.rs  main.rs  results.rs  routes.rs  schema.rs  types.rs
hua/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
(+125 files in other folders)
