[package]
name = "red_drink"
version = "0.1.0"
authors = ["ekuinox <depkey@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "3.0.0-alpha.9"
reqwest = "0.10.4"
base64 = "0.12.0"
rand = "0.7.3"
url = "2.1.1"
dotenv = "0.15.0"
failure = "0.1.8"
rocket = "0.4.4"
rocket_contrib = "0.4.4"
lazy_static = "1.4.0"